dashboard: Share dashboard changes
Share dashboard wizard
* Slide-in from where the user can manage the dashboard sharing settings
* Connected to the Rest API (Create, update, and delete public token)

Menu header
* Displays sharing information
* Allows accessing dashboard sharing wizard
* Improved dropdown menu generation

CMK-26948
CMK-27409

Change-Id: I746b6086e6f8b50453ded17b216050c1f7555739

--- a/packages/cmk-frontend-vue/src/assets/variables.css
+++ b/packages/cmk-frontend-vue/src/assets/variables.css
@@ -185,6 +185,7 @@
   --icon-widget-clone: url('~cmk-frontend/themes/facelift/images/icon_widget_clone.svg');
   --icon-widget-delete: url('~cmk-frontend/themes/facelift/images/icon_widget_delete.svg');
   --icon-werk-ack: url('~cmk-frontend/themes/facelift/images/icon_werk_ack.png');
+  --icon-clone: url('~cmk-frontend/themes/facelift/images/icon_clone.svg');
 }
 
 @layer theme {
@@ -211,6 +212,7 @@
     --popup-dialog-bg-color: var(--color-daylight-grey-10);
     --popup-dialog-title-color: var(--color-conference-grey-100);
     --popup-dialog-message-color: var(--color-mid-grey-100);
+    --menu-entry-disabled: var(--color-midnight-grey-100);
 
     /* ATTENTION: No explicit rgb color definitions beyond this point. Reuse variables above */
 
@@ -298,6 +300,7 @@
     --popup-dialog-bg-color: var(--color-midnight-grey-50);
     --popup-dialog-title-color: var(--color-white-100);
     --popup-dialog-message-color: var(--color-mid-grey-0);
+    --menu-entry-disabled: var(--color-white-70);
 
     /* ATTENTION: No explicit rgb color definitions beyond this point. Reuse variables above */
 
