Fix tooltip z index
The radix tooltip was teleported outside of modal, which is why it
didn't inherit the z-index.

We inline the tooltip instead, making sure it doesn't inherit any visual
attributes from the parent.

We move to a layered z-index approach:
  base < title menu < navigation < modal
and within these, you can have
  dropdown < popup < tooltip

This means that when having a rule open with a dropdown and a tooltip:
scrolling them will hide all behind the title menu and show the tooltip
above the dropdown.

CMK-26594

Change-Id: I424bb62d8353697b80354c78ca3db055ec11d110

--- a/packages/cmk-frontend/src/themes/facelift/scss/_main_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_main_menu.scss
@@ -176,11 +176,11 @@
       width: calc(100vw - 64px);
       height: 100vh;
       position: absolute;
-      z-index: 1000;
+      z-index: $z-index-navigation;
     }
 
     div.fullscreen-popup {
-      z-index: 1001;
+      z-index: $z-index-modal;
       width: auto;
       height: 100%;
     }
@@ -194,7 +194,7 @@
       padding-bottom: $mainmenu-spacing-bottom;
       background-color: $popup-trigger-active-bg-color;
       border-right: $popup-border;
-      z-index: 2000;
+      z-index: $z-index-navigation + $z-index-popup-offset;
 
       &.min {
         left: 48px;
@@ -517,7 +517,7 @@
     right: 0;
     bottom: 0;
     left: 65px;
-    z-index: 100;
+    z-index: $z-index-navigation + $z-index-popup-offset - 1;
     display: none;
     cursor: default;
     background-color: $popup-shadow-color;
