--- a/packages/cmk-frontend/src/themes/facelift/scss/_variables_common.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_variables_common.scss
@@ -6,6 +6,8 @@
 
 // Common variables used across all themes
 
+@import '../zindices.scss';
+
 // -----------------------------------------------------------------------------
 // Colors
 // The colors defined here represents the color palette of Checkmk. Use them in
