Global: Update new breadcrumb location 2px spacing removed
CMK-25098

Change-Id: Ic9d64a747f7a33f606d11a9231b6dec1412cdaf5

--- a/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
@@ -42,7 +42,7 @@ div#top_heading {
   div.titlebar {
     display: flex;
     height: 53px;
-    padding: 0.5 * $spacing $spacing 0;
+    padding: $titlebar-spacing-vertical $titlebar-spacing-horizontal 0;
     background-color: $bg-color;
 
     > div:first-child {
