--- a/packages/cmk-frontend/src/themes/facelift/scss/_variables_common.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_variables_common.scss
@@ -141,6 +141,8 @@ $trial-expiration-warn-color: rgb(255, 76, 0);
 $label-filters-label-max-width: 196px;
 $main-menu-entry-margin-left: 28px;
 $popup-border-width: 4px;
+$titlebar-spacing-horizontal: 8px; // --dimension-4
+$titlebar-spacing-vertical: 4px; // --dimension-3
 
 // -----------------------------------------------------------------------------
 // Z-Indexes
