--- a/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
@@ -43,6 +43,8 @@ $font-color-orange: $orange-2;
 $font-color-breadcrumb-inactive: $color-conference-grey-70;
 $font-color-breadcrumb-interactive: $color-conference-grey-100;
 $font-color-breadcrumb-hover: $color-corporate-green-70;
+// table action messages
+$font-color-table-action: $color-conference-grey-100;
 
 // -----------------------------------------------------------------------------
 // Form elements (input, textarea, button, etc.)
