--- a/packages/cmk-frontend/src/themes/modern-dark/scss/_variables.scss
+++ b/packages/cmk-frontend/src/themes/modern-dark/scss/_variables.scss
@@ -44,6 +44,8 @@ $font-color-orange: $orange-1;
 $font-color-breadcrumb-inactive: $color-white-70;
 $font-color-breadcrumb-interactive: $color-white-100;
 $font-color-breadcrumb-hover: $color-corporate-green-50;
+// table action messages
+$font-color-table-action: $color-white-100;
 
 // -----------------------------------------------------------------------------
 // Form elements (input, textarea, button, etc.)
