PEV: define color coding for splitted slide in
left part: --color-daylight-grey-30 | --color-midnight-grey-80
right part: --ux-theme-1

Includes revert of 64898ca4c922ec6cfe4773e4452170a45901471e

CMK-27668

Change-Id: I03e8475bb339adcd915ee71379b537e310eaf72a

--- a/packages/cmk-frontend-vue/src/assets/variables.css
+++ b/packages/cmk-frontend-vue/src/assets/variables.css
@@ -269,6 +269,7 @@
     --perfometer-bg-color: var(--color-white-100);
     --inline-help-text-bg: rgb(223 239 251);
     --inline-help-icon-bg: rgb(12 129 238);
+    --slide-in-left-part: var(--color-daylight-grey-30);
 
     /* breadcrumb colors */
     --font-color-breadcrumb-inactive: var(--color-conference-grey-70);
@@ -360,6 +361,7 @@
     --perfometer-bg-color: var(--color-mist-grey-30);
     --inline-help-text-bg: rgb(17 24 29);
     --inline-help-icon-bg: rgb(6 103 193);
+    --slide-in-left-part: var(--color-midnight-grey-80);
 
     /* breadcrumb colors */
     --font-color-breadcrumb-inactive: var(--color-white-70);
