--- a/packages/cmk-frontend-vue/src/assets/variables.css
+++ b/packages/cmk-frontend-vue/src/assets/variables.css
@@ -262,6 +262,7 @@
     --input-hover-bg-color: var(--ux-theme-4);
     --code-background-color: var(--color-daylight-grey-50);
     --wizard-progress-bar-background-color: var(--color-daylight-grey-60);
+    --wizard-progress-bar-background-badge-color: var(--color-daylight-grey-60);
     --headline-color: var(--ux-theme-4);
     --db-content-bg-color: var(--ux-theme-1);
     --even-tr-bg-color: var(--ux-theme-2);
@@ -354,6 +355,7 @@
     --input-hover-bg-color: var(--ux-theme-4);
     --code-background-color: var(--color-midnight-grey-100);
     --wizard-progress-bar-background-color: var(--white);
+    --wizard-progress-bar-background-badge-color: var(--color-conference-grey-100);
     --headline-color: var(--ux-theme-3);
     --db-content-bg-color: var(--ux-theme-2);
     --even-tr-bg-color: var(--ux-theme-3);
