PEV: Implement error page for dashboard token in plain html
CMK-27413

Change-Id: I04e58692d7d97d2b294bdb17f2452558ae1826ed

--- a/packages/cmk-frontend/src/themes/facelift/theme.scss
+++ b/packages/cmk-frontend/src/themes/facelift/theme.scss
@@ -37,3 +37,4 @@
 @import 'scss/_license_usage.scss';
 @import 'scss/_robotmk.scss';
 @import 'scss/_cse_banner.scss';
+@import 'scss/_shared_dashboard_error.scss';
