--- a/packages/cmk-frontend/src/themes/modern-dark/theme.scss
+++ b/packages/cmk-frontend/src/themes/modern-dark/theme.scss
@@ -37,3 +37,4 @@
 @import '../facelift/scss/_license_usage.scss';
 @import '../facelift/scss/_robotmk.scss';
 @import '../facelift/scss/_cse_banner.scss';
+@import '../facelift/scss/_shared_dashboard_error.scss';
