--- a/notifications/templates/mail/bulk.html
+++ b/notifications/templates/mail/bulk.html
@@ -29,10 +29,10 @@
                         <td style="padding: 0; vertical-align: middle;">
                             <div class="mobile_event_marker_bulk"
                                  style="{{ macros.event_marker_bulk_style() }};
-                                        {% if service_notification %} {{ state_mapping[(entry.PREVIOUSSERVICEHARDSTATE|default("UNKNOWN") )] }} {% else %} {{ state_mapping[(entry.PREVIOUSHOSTHARDSTATE|default("UNKNOWN") )] }} {% endif %};
+                                        {% if bulk_service_notification %} {{ state_mapping[(entry.PREVIOUSSERVICEHARDSTATE|default("UNKNOWN") )] }} {% else %} {{ state_mapping[(entry.PREVIOUSHOSTHARDSTATE|default("UNKNOWN") )] }} {% endif %};
                                         display: inline-block;
                                         /* Inline block to respect width */">
-                                {% if service_notification %}
+                                {% if bulk_service_notification %}
                                     {{ (entry.PREVIOUSSERVICEHARDSTATE|default("UNKNOWN") )[:4] }}
                                 {% else %}
                                     {{ (entry.PREVIOUSHOSTHARDSTATE|default("UNKNOWN") )[:4] }}
@@ -59,10 +59,10 @@
                         <td style="padding: 0; vertical-align: middle;">
                             <div class="mobile_event_marker_bulk"
                                  style="{{ macros.event_marker_bulk_style() }};
-                                        {% if service_notification %} {{ state_mapping[entry.SERVICESTATE] }} {% else %} {{ state_mapping[entry.HOSTSTATE] }} {% endif %};
+                                        {% if bulk_service_notification %} {{ state_mapping[entry.SERVICESTATE] }} {% else %} {{ state_mapping[entry.HOSTSTATE] }} {% endif %};
                                         display: inline-block;
                                         /* Inline block to respect width */">
-                                {% if service_notification %}
+                                {% if bulk_service_notification %}
                                     {{ entry.SERVICESTATE[:4] }}
                                 {% else %}
                                     {{ entry.HOSTSTATE[:4] }}
