New dashboard workflow: Filter frontend bugfix for dark theme Texts overlap with each other
CMK-27994

Change-Id: Iaae4ce6b7d76ad21c00ea49f3044ccde4dc082d8

--- a/packages/cmk-frontend-vue/src/assets/variables.css
+++ b/packages/cmk-frontend-vue/src/assets/variables.css
@@ -226,6 +226,7 @@
     --inline-help-icon-bg: rgb(6 103 193);
     --inline-error-border-color: var(--color-light-red-40);
     --inline-error-text-color: var(--color-light-red-30);
+    --slide-in-left-part: var(--color-midnight-grey-80);
 
     /* Cmk Button Variants */
     --default-button-primary-color: var(--color-corporate-green-50);
