feat(ai-button): add option to not render the button
CMK-27622

Also added eventlistener to open AI slideout on custom event.

Change-Id: Ie3fe0a1205e3209cfc45be30ac03878baae32cb0

--- a/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
@@ -530,6 +530,29 @@ div#top_heading {
           border-radius: 4px;
           box-sizing: border-box;
 
+          &.ai_animation {
+            position: relative;
+            overflow: hidden;
+
+            &::after {
+              content: '';
+              width: 100%;
+              height: 100%;
+              position: absolute;
+              inset: 0;
+              transform: translateX(-100%);
+              opacity: 0.2;
+              background: linear-gradient(
+                90deg,
+                transparent 0,
+                var(--color-purple-80) 20%,
+                var(--color-purple-60) 60%,
+                transparent
+              );
+              animation: shimmer 3s infinite;
+            }
+          }
+
           &:hover {
             cursor: pointer;
             background-color: $button-bg-color-default;
@@ -561,6 +584,12 @@ div#top_heading {
         }
       }
     }
+  }
+}
+
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
   }
 }
 
