--- a/packages/cmk-frontend/src/themes/facelift/scss/_status.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_status.scss
@@ -97,6 +97,7 @@ table.job_details td.state.state0 {
   a {
     color: $font-color-black !important;
     background-color: $color-state-success-background !important;
+    border: 1px solid $color-state-success-border !important;
   }
 }
 
@@ -123,6 +124,7 @@ table.job_details td.state.state1 {
   a {
     color: $font-color-black !important;
     background-color: $color-state-1-background !important;
+    border: 1px solid $color-state-1-border !important;
   }
 }
 
@@ -147,6 +149,7 @@ table.job_details td.state.state2 {
   a {
     color: $font-color-white !important;
     background-color: $color-state-2-background !important;
+    border: 1px solid $color-state-2-border !important;
   }
 }
 
@@ -169,6 +172,7 @@ td.count.hstate2 {
   a {
     color: $font-color-white !important;
     background-color: $color-state-3-background !important;
+    border: 1px solid $color-state-3-border !important;
   }
 }
 
@@ -391,6 +395,7 @@ td.perfometer {
 
   div.content {
     width: 120px;
+    border: 1px solid $perfometer-border-color;
   }
 
   div.title {
@@ -402,7 +407,7 @@ td.perfometer {
     overflow: hidden;
     font-weight: $font-weight-bold;
     line-height: 22px;
-    color: $font-color-light-bg;
+    color: $font-perfometer-color;
     text-align: center;
     white-space: nowrap;
   }
