--- a/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_variables.scss
@@ -23,54 +23,64 @@ $ux-theme-6: rgb(204, 207, 219);
 
 // UX colors
 $navbar-color: $ux-theme-2;
-$bg-color: $ux-theme-0;
+$bg-color: $color-daylight-grey-20;
 $bg-color-secondary: $ux-theme-1;
 $base-color: $ux-theme-1;
 $headline-color: $ux-theme-4;
 $table-highlight-color: $ux-theme-5;
-$line-color: $ux-theme-5;
+$line-color: $color-daylight-grey-60;
 
 // -----------------------------------------------------------------------------
 // Fonts
 // -----------------------------------------------------------------------------
-$font-color: $grey-4;
+$font-color: $color-conference-grey-100;
 $font-color-dimmed: rgba($grey-4, 0.8);
 $font-color-light-bg: $grey-4;
 $font-color-light-grey: $grey-1;
 $font-color-green: $success-dimmed-2;
-$font-color-orange: $orange-2;
+$font-color-orange: $color-orange-80;
+
+// perf-o-meter colors
+$font-perfometer-color: $color-conference-grey-100;
+$perfometer-border-color: $color-mid-grey-50;
+
 // breadcrumb font colors
 $font-color-breadcrumb-inactive: $color-conference-grey-70;
 $font-color-breadcrumb-interactive: $color-conference-grey-100;
 $font-color-breadcrumb-hover: $color-corporate-green-70;
+
 // table action messages
 $font-color-table-action: $color-conference-grey-100;
 
 // -----------------------------------------------------------------------------
 // Form elements (input, textarea, button, etc.)
 // -----------------------------------------------------------------------------
-$default-button-border-color: rgb(183, 180, 180);
+$default-button-border-color: $color-mid-grey-50;
 $default-submit-button-border-color: $success-dimmed;
 
-$input-background-color: $ux-theme-5;
+$input-background-color: $color-daylight-grey-50;
 $input-hover-bg-color: $ux-theme-4;
 $input-nested-background-color: $ux-theme-3;
-$input-dropdown-border-color: $ux-theme-6;
+$input-dropdown-border-color: $color-mid-grey-50;
 
 // -----------------------------------------------------------------------------
 // States
 // -----------------------------------------------------------------------------
-$color-state-1-background: $yellow;
-$color-state-2-background: rgb(232, 85, 85);
-$color-state-3-background: rgb(252, 185, 123);
-$color-state-4-background: $middarkgrey;
+$color-state-1-background: $color-yellow-50;
+$color-state-1-border: $color-yellow-70;
+$color-state-2-background: $color-dark-red-50;
+$color-state-2-border: $color-dark-red-50;
+$color-state-3-background: $color-orange-50;
+$color-state-3-border: $color-orange-70;
+$color-state-4-background: $color-mist-grey-50;
 $color-state-5-background: rgb(72, 203, 240);
 $color-state-6-background: rgb(185, 236, 250);
 $color-state-7-background: rgb(233, 128, 110);
 $color-state-8-background: rgb(241, 174, 162);
 $color-state-9-background: rgb(191, 90, 191);
-$color-state-success-background: $success; // green
-$color-state-running-background: $hostdown;
+$color-state-success-background: $color-corporate-green-50;
+$color-state-success-border: $color-corporate-green-70;
+$color-state-running-background: $color-dark-blue-50;
 
 // -----------------------------------------------------------------------------
 // Tables
@@ -90,8 +100,8 @@ $data-container-bg-color: null;
 $input-button-bg-color: $ux-theme-5;
 $input-button-hover-bg-color: $ux-theme-5;
 
-$odd-tr-bg-color: $ux-theme-3;
-$even-tr-bg-color: $ux-theme-1;
+$odd-tr-bg-color: $color-daylight-grey-40;
+$even-tr-bg-color: $color-daylight-grey-30;
 
 $floatfilter-bg-color: rgba($white, 0.2);
 
@@ -204,13 +214,13 @@ $ntop-protocol-painter-padding-top: null;
 // The main dashboard shows the hosts and services stats dashlets right next to the total host and
 // service problems graphs. Therefore, we should keep the colors in sync.
 // metrics counterpart: cmk_hosts_down, cmk_services_critical
-$hexagon-critical-color: $danger;
+$hexagon-critical-color: $color-dark-red-50;
 // metrics counterpart: cmk_hosts_unreachable, cmk_services_unknown
-$hexagon-unknown-color: rgb(255, 136, 0);
+$hexagon-unknown-color: $color-orange-50;
 // metrics counterpart: cmk_hosts_in_downtime, cmk_services_in_downtime
-$hexagon-downtime-color: rgb(60, 194, 255);
+$hexagon-downtime-color: $color-light-blue-50;
 // metrics counterpart: cmk_services_on_down_hosts
-$hexagon-host-down-color: rgb(16, 99, 176);
+$hexagon-host-down-color: $color-dark-blue-50;
 // =============================
 $hexagon-empty-color: $ux-theme-4;
 $hexagon-empty-fill-opacity: 0.4;
