MTS: loading for extension packages
- upload extension package show success message
- enable extension package show waiting message

CMK-27816 / CMK-26730

Change-Id: I10d5740cc80ca5eaea5fe6bae1a220734b2c640a

--- a/packages/cmk-frontend/src/themes/facelift/scss/_main.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_main.scss
@@ -466,6 +466,20 @@ div.waiting {
     margin-top: 0;
     margin-bottom: 0;
   }
+
+  input.button.primary {
+    color: $font-color-black;
+    background-color: $new-success;
+    border: 1px solid $new-success-dimmed;
+    display: block;
+    height: 32px;
+    margin: $spacing-half 0;
+    padding: 0 8px;
+    align-items: center;
+    justify-content: center;
+    letter-spacing: unset;
+    border-radius: $theme-border-radius;
+  }
 }
 
 div.really {
