--- a/packages/cmk-frontend/src/themes/facelift/scss/_variables_common.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_variables_common.scss
@@ -26,6 +26,7 @@ $danger-dimmed: color.adjust($danger, $lightness: -25%);
 //       in _login.scss. Rebranding and the 2.2.0 release made this temporary hack necessary.
 //       See https://jira.lan.tribe29.com/browse/CMK-13295
 $new-success: rgb(21, 209, 160);
+$new-success-dimmed: rgb(15, 148, 114);
 $success: rgb(19, 211, 137);
 $success-dimmed: color.adjust($success, $lightness: -5%);
 $success-dimmed-2: color.adjust($success, $lightness: -15%);
