Update 2FA input to adhere to latest UX design
CMK-14763

Change-Id: Ia6e15445eb15013129407044fb54f72b61b0ab66

--- a/packages/cmk-frontend/src/themes/facelift/scss/_login.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_login.scss
@@ -219,6 +219,10 @@ body.login {
   }
 
   &.two_factor {
+    #login_window {
+      background: transparent;
+    }
+
     h1 {
       margin-left: 0;
       text-align: left;
